name:                build-lib
version:             0.1.0.0
synopsis:            not much yet
description:         Please see README.md
homepage:            http://github.com/minimal/build-lib#readme
license:             BSD3
license-file:        LICENSE
author:              Chris McDevitt
maintainer:
copyright:           Chris McDevitt 2015
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , yaml
                     , turtle
                     , bytestring
  default-language:    Haskell2010

executable build-lib-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , build-lib
  default-language:    Haskell2010

test-suite build-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , build-lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/minimal/build-lib
